--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -455,7 +455,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New user registered.</td>
+      <td>New User registered.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -479,7 +479,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New project created.</td>
+      <td>New Project created.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -503,7 +503,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New task created.</td>
+      <td>New Task created.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -527,7 +527,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New comment created.</td>
+      <td>New Comment created.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -551,7 +551,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New premium signature.</td>
+      <td>New Premium Signature.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -575,7 +575,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New forum post.</td>
+      <td>New Forum Post.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -599,7 +599,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New admin created.</td>
+      <td>New Admin created.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -623,7 +623,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>User assigned to task.</td>
+      <td>User Assigned to Task.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -647,7 +647,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New close request.</td>
+      <td>New Close Request.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -671,7 +671,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>New reply created.</td>
+      <td>New Reply created.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -695,7 +695,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>User joined project.</td>
+      <td>User Joined Project.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -719,7 +719,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Update user information.</td>
+      <td>Update User's information.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -745,7 +745,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Update project information.</td>
+      <td>Update Project's information.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -771,7 +771,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Update forum post.</td>
+      <td>Update Forum Post.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -797,7 +797,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Update task comment.</td>
+      <td>Update Task Comment.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -823,7 +823,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Update task information.</td>
+      <td>Update Task's information.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -849,7 +849,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Update close request information.</td>
+      <td>Update CloseRequest's information.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -875,7 +875,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Update admin information.</td>
+      <td>Update Admin's information.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -902,7 +902,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Delete task.</td>
+      <td>Delete Task.</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -927,7 +927,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Delete task comment</td>
+      <td>Delete Task's Comment</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -952,7 +952,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Delete project</td>
+      <td>Delete Project</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -977,7 +977,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Delete forum post</td>
+      <td>Delete Forum Post</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -1002,7 +1002,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Delete forum post reply</td>
+      <td>Delete ForumPost's Reply</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
@@ -1027,7 +1027,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query description</b></td>
-      <td>Delete user</td>
+      <td>Delete User</td>
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
