:pencil2: testing :pencil2:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -29,23 +29,28 @@ This artefact contains the physical schema of the database, the identification a
 ### 1.2. Frequent Queries
 
 <table>
-    <tr>
-        <td><b>Query reference</b></td>
-        <td>SELECT01</td>
-    </tr>
-    <tr>
-        <td><b>Query description</b></td>
-        <td>Get All Users</td>
-    </tr>
-    <tr>
-        <td><b>Query frequency</b></td>
-        <td>hundreds per day</td>
-    </tr>
-    <tr>
-        <td><b>SQL Code</b></td>
-        <td><code "sql">SELECT username, email, gender, description
-        FROM UserTable;</code></td>
-    </tr>
+  <tbody>
+      <tr>
+          <td><b>Query reference</b></td>
+          <td>SELECT01</td>
+      </tr>
+      <tr>
+          <td><b>Query description</b></td>
+          <td>Get All Users</td>
+      </tr>
+      <tr>
+          <td><b>Query frequency</b></td>
+          <td>hundreds per day</td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <code>
+            SELECT username, email, gender, description
+            FROM UserTable;
+          </code>
+        </td>
+      </tr>
+    </tbody>
 </table>
 
 <table>
