--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -473,7 +473,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -497,7 +497,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -521,7 +521,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -545,7 +545,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -569,7 +569,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -593,7 +593,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -617,7 +617,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -641,7 +641,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -665,7 +665,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -689,7 +689,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -713,7 +713,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -739,7 +739,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -765,7 +765,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -791,7 +791,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -817,7 +817,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -843,7 +843,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -869,7 +869,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -895,7 +895,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 
@@ -921,7 +921,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -946,7 +946,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -971,7 +971,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -996,7 +996,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -1021,7 +1021,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 <table>
@@ -1046,7 +1046,7 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 
@@ -1094,268 +1094,250 @@ This artefact contains the physical schema of the database, the identification a
         </code>
       </td>
     </tr>
-  <tbody>
+  </tbody>
 </table>
 
 
 ### 2.2. Full-text Search Indices
 
 <table>
-    <tbody>
+  <tbody>
     <tr>
-    <td><b>Index reference<b></td>
-    <td>IDX01</td>
+      <td><b>Index reference</b></td>
+      <td>IDX01</td>
     </tr>
     <tr>
-    <td><b>Related queries</b></td>
-    <td>TODO: RELATED QUERIES </td>
+      <td><b>Related queries</b></td>
+      <td>tbd</td>
     </tr>
     <tr>
-    <td><b>Index relation</b></td>
-    <td>User</td>
+      <td><b>Index relation</b></td>
+      <td>UserTable</td>
     </tr>
     <tr>
-    <td><b>Index attribute</b></td>
-    <td>userName</td>
+      <td><b>Index attribute</b></td>
+      <td>username</td>
     </tr>
     <tr>
-    <td><b>Index type</b></td>
-    <td>GIN</td>
+      <td><b>Index type</b></td>
+      <td>GIN</td>
     </tr>
     <tr>
-    <td><b>Clustering</b></td>
-    <td>No</td>
+      <td><b>Clustering</b></td>
+      <td>No</td>
     </tr>
-        <tr>
-        <td><b>Justification</b></td>
-        <td>
-        To improve performance of full text search while searching for usernames; GIN because usernames never changes.
-        </td>
-        </tr>
-        <tr>
-            <td><b>SQL Code</b></td>
-            <td>
-           <code sql>
-            CREATE INDEX search_username ON User USING GIN (to_tsvector('english', username))
-            </code>
-            </td>
-        </tr>
-    </tbody>
+    <tr>
+      <td><b>Justification</b></td>
+      <td>To improve performance of full text search while searching for usernames; GIN because usernames never changes.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE INDEX search_username ON User USING GIN (to_tsvector('english', username));
+        </code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <table>
-    <tbody>
-        <tr>
-        <td><b>Index reference<b></td>
-        <td>IDX02</td>
-        </tr>
-        <tr>
-        <td><b>Related queries</b></td>
-        <td>TODO: RELATED QUERIES</td>
-        </tr>
-        <tr>
-        <td><b>Index relation</b></td>
-        <td>User</td>
-        </tr>
-        <tr>
-        <td><b>Index attribute</b></td>
-        <td>name</td>
-        </tr>
-        <tr>
-        <td><b>Index type</b></td>
-        <td>GIN</td>
-        </tr>
-        <tr>
-        <td><b>Clustering</b></td>
-        <td>No</td>
-        </tr>
-        <tr>
-        <td><b>Justification</b></td>
-        <td>
-        To improve performance of full text search while searching for user full names; GIN because updates in user full names are rare.
-        </td>
-        </tr>
-        <tr>
-            <td><b>SQL Code</b></td>
-            <td>
-           <code sql>
-               CREATE INDEX search_user_name ON User USING GIN (to_tsvector('english', name))
-            </code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>IDX02</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>tbd</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>UserTable</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>name</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>GIN</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td>To improve performance of full text search while searching for user full names; GIN because updates in user full names are rare.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE INDEX search_user_name ON User USING GIN (to_tsvector('english', name));
+        </code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <table>
-    <tbody>
-        <tr>
-        <td><b>Index reference<b></td>
-        <td>IDX03</td>
-        </tr>
-        <tr>
-        <td><b>Related queries</b></td>
-        <td>TODO: RELATED QUERIES</td>
-        </tr>
-        <tr>
-        <td><b>Index relation</b></td>
-        <td>Project</td>
-        </tr>
-        <tr>
-        <td><b>Index attribute</b></td>
-        <td>name</td>
-        </tr>
-        <tr>
-        <td><b>Index type</b></td>
-        <td>GIN</td>
-        </tr>
-        <tr>
-        <td><b>Clustering</b></td>
-        <td>No</td>
-        </tr>
-        <tr>
-        <td><b>Justification</b></td>
-        <td>
-        To improve performance of full text search while searching for project names; GIN because updates in the project name are rare.
-        </td>
-        </tr>
-        <tr>
-            <td><b>SQL Code</b></td>
-            <td>
-           <code sql>
-               CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name))
-            </code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>IDX03</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>tbd</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>Project</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>name</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>GIN</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td>To improve performance of full text search while searching for project names; GIN because updates in the project name are rare.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name));
+        </code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <table>
-    <tbody>
-        <tr>
-        <td><b>Index reference<b></td>
-        <td>IDX03</td>
-        </tr>
-        <tr>
-        <td><b>Related queries</b></td>
-        <td>TODO: RELATED QUERIES</td>
-        </tr>
-        <tr>
-        <td><b>Index relation</b></td>
-        <td>Project</td>
-        </tr>
-        <tr>
-        <td><b>Index attribute</b></td>
-        <td>description</td>
-        </tr>
-        <tr>
-        <td><b>Index type</b></td>
-        <td>GisT</td>
-        </tr>
-        <tr>
-        <td><b>Clustering</b></td>
-        <td>No</td>
-        </tr>
-        <tr>
-        <td><b>Justification</b></td>
-        <td>
-        To improve performance of full text search while searching for project names; GisT because the project description is dynamic.
-        </td>
-        </tr>
-        <tr>
-            <td><b>SQL Code</b></td>
-            <td>
-           <code sql>
-               CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('english', description))
-            </code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>IDX04</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>tbd</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>Project</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>description</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>GisT</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td>To improve performance of full text search while searching for project names; GisT because the project description is dynamic.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          	CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('english', description));
+        </code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <table>
-    <tbody>
-        <tr>
-        <td><b>Index reference<b></td>
-        <td>IDX04</td>
-        </tr>
-        <tr>
-        <td><b>Related queries</b></td>
-        <td>TODO: RELATED QUERIES</td>
-        </tr>
-        <tr>
-        <td><b>Index relation</b></td>
-        <td>Task</td>
-        </tr>
-        <tr>
-        <td><b>Index attribute</b></td>
-        <td>name</td>
-        </tr>
-        <tr>
-        <td><b>Index type</b></td>
-        <td>GIN</td>
-        </tr>
-        <tr>
-        <td><b>Clustering</b></td>
-        <td>No</td>
-        </tr>
-        <tr>
-        <td><b>Justification</b></td>
-        <td>
-        To improve performance of full text search while searching for tasks; GIN because the updates in the task name are rare.
-        </td>
-        </tr>
-        <tr>
-            <td><b>SQL Code</b></td>
-            <td>
-           <code sql>
-               CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', name))
-            </code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>IDX05</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>tbd</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>Task</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>name</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>GIN</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td>To improve performance of full text search while searching for tasks; GIN because the updates in the task name are rare.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', name))
+        </code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <table>
-    <tbody>
-        <tr>
-        <td><b>Index reference<b></td>
-        <td>IDX04</td>
-        </tr>
-        <tr>
-        <td><b>Related queries</b></td>
-        <td>TODO: RELATED QUERIES</td>
-        </tr>
-        <tr>
-        <td><b>Index relation</b></td>
-        <td>Task</td>
-        </tr>
-        <tr>
-        <td><b>Index attribute</b></td>
-        <td>description</td>
-        </tr>
-        <tr>
-        <td><b>Index type</b></td>
-        <td>GisT</td>
-        </tr>
-        <tr>
-        <td><b>Clustering</b></td>
-        <td>No</td>
-        </tr>
-        <tr>
-        <td><b>Justification</b></td>
-        <td>
-        To improve performance of full text search while searching for tasks; GisT because the task description is dynamic.
-        </td>
-        </tr>
-        <tr>
-            <td><b>SQL Code</b></td>
-            <td>
-           <code sql>
-               CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', name))
-            </code>
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <td><b>Index reference</b></td>
+      <td>IDX06</td>
+    </tr>
+    <tr>
+      <td><b>Related queries</b></td>
+      <td>tbd</td>
+    </tr>
+    <tr>
+      <td><b>Index relation</b></td>
+      <td>Task</td>
+    </tr>
+    <tr>
+      <td><b>Index attribute</b></td>
+      <td>description</td>
+    </tr>
+    <tr>
+      <td><b>Index type</b></td>
+      <td>GisT</td>
+    </tr>
+    <tr>
+      <td><b>Clustering</b></td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><b>Justification</b></td>
+      <td>To improve performance of full text search while searching for tasks; GisT because the task description is dynamic.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <code>
+          CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', name))
+        </code>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 ## 3. Triggers
@@ -1678,7 +1660,7 @@ This artefact contains the physical schema of the database, the identification a
 </table>
 
 
-## 4. Complete SQL pre
+## 4. Complete SQL Code
 
 ```SQL
 DROP SCHEMA IF EXISTS plenum CASCADE;
@@ -2309,7 +2291,7 @@ Changes made to the first submission:
 
 ***
 
-GROUP17xx, xx/xx/2018
+GROUP1743, 01/04/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
