--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1151,41 +1151,45 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Related queries</b></td>
-      <td>TBD</td>
+      <td>SELECT02</td>
     </tr>
     <tr>
       <td><b>Index relation</b></td>
-      <td>tbd</td>
+      <td>UserTable</td>
     </tr>
     <tr>
       <td><b>Index attribute</b></td>
-      <td>tbd</td>
+      <td>email</td>
     </tr>
     <tr>
       <td><b>Index type</b></td>
-      <td>tbd</td>
+      <td>Hash</td>
     </tr>
     <tr>
       <td><b>Cardinality</b></td>
-      <td>tbd</td>
+      <td>High</td>
     </tr>
     <tr>
       <td><b>Clustering</b></td>
-      <td>tbd</td>
+      <td>No</td>
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td>tbd</td>
+      <td> SELECT02 needs to be fast because it is executed many times; 
+	      it doesn't require range query support; 
+	      cardinality is high because 'email' is an unique key; 
+	      not a good candidate for clustering.</td>
     </tr>
     <tr>
       <td colspan="2">
         <code>
-         sql code
+          CREATE INDEX emailUser ON "UserTable" USING hash (email); 
         </code>
       </td>
     </tr>
   </tbody>
 </table>
+
 
 
 ### 2.2. Full-text Search Indices
