fixed frequency :zap:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -554,7 +554,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per month</td>
+      <td>tens per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -578,7 +578,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per month</td>
+      <td>hundreds per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -602,7 +602,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per month</td>
+      <td>hundreds per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -626,7 +626,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per day</td>
+      <td>hundreds per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -650,7 +650,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per month</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -674,7 +674,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per day</td>
+      <td>hundreds per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -698,7 +698,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per day</td>
+      <td>once per month</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -746,7 +746,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per week</td>
+      <td>tens per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -770,7 +770,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per week</td>
+      <td>hundreds per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -794,7 +794,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Dozens per week</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -818,7 +818,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per week</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -844,7 +844,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per week</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -870,7 +870,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -896,7 +896,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per week</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -922,7 +922,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -948,7 +948,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>units per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -974,7 +974,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>units per month</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1001,7 +1001,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1026,7 +1026,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1051,7 +1051,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1076,7 +1076,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1101,7 +1101,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per day</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1126,7 +1126,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Query frequency</b></td>
-      <td>Once per day</td>
+      <td>tens per month</td>
     </tr>
     <tr>
       <td colspan="2">
